Update registry api and deployment references 1
