# src/pfe/file-watcher/server/src/projects/projectUtil.ts
@@ -135,7 +135,7 @@ export async function containerCreate(operation: Operation, script: string, comm
     if (process.env.IN_K8 === "true") {
         const workspaceSettingsInfo = await workspaceSettings.getWorkspaceSettingsInfo();
         logger.logProjectInfo("workspaceSettingsInfo " + JSON.stringify(workspaceSettingsInfo), projectID);
-        deploymentRegistry = workspaceSettingsInfo.deploymentRegistry.trim();
+        deploymentRegistry = workspaceSettingsInfo.registryAddress.trim() + "/" + workspaceSettingsInfo.registryNamespace.trim();
         logger.logProjectInfo("Deployment Registry: " + deploymentRegistry, projectID);
 
         if (projectDeploymentRegistry && projectDeploymentRegistry != deploymentRegistry) {
@@ -248,7 +248,7 @@ export async function containerUpdate(operation: Operation, script: string, comm
     if (process.env.IN_K8 === "true") {
         const workspaceSettingsInfo = await workspaceSettings.getWorkspaceSettingsInfo();
         logger.logProjectInfo("workspaceSettingsInfo " + JSON.stringify(workspaceSettingsInfo), projectID);
-        deploymentRegistry = workspaceSettingsInfo.deploymentRegistry.trim();
+        deploymentRegistry = workspaceSettingsInfo.registryAddress.trim() + "/" + workspaceSettingsInfo.registryNamespace.trim();
         logger.logProjectInfo("Deployment Registry: " + deploymentRegistry, projectID);
 
         if (projectDeploymentRegistry && projectDeploymentRegistry != deploymentRegistry) {
@@ -1454,7 +1454,7 @@ async function containerBuildAndRun(event: string, buildInfo: BuildRequest, oper
 
         const workspaceSettingsInfo = await workspaceSettings.getWorkspaceSettingsInfo();
         logger.logInfo("workspaceSettingsInfo " + JSON.stringify(workspaceSettingsInfo));
-        const deploymentRegistry: string = workspaceSettingsInfo.deploymentRegistry.trim();
+        const deploymentRegistry: string = workspaceSettingsInfo.registryAddress.trim() + "/" + workspaceSettingsInfo.registryNamespace.trim();
         logger.logProjectInfo("Deployment Registry: " + deploymentRegistry, buildInfo.projectID);
 
         if (projectDeploymentRegistry && projectDeploymentRegistry != deploymentRegistry) {
